[gd_scene load_steps=27 format=2]

[ext_resource path="res://ghost.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Enemy.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Hitbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Hurtbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Stats.tscn" type="PackedScene" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 13.0091
height = 2.5689

[sub_resource type="Animation" id=2]
resource_name = "Death"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 4, 5, 6 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "death_finished"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "Hit"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "hurt_finish"
} ]
}

[sub_resource type="Animation" id=4]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="AnimationNodeAnimation" id=5]
animation = "Hit"

[sub_resource type="AnimationNodeAnimation" id=6]
animation = "Hit"

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "Hit"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "Hit"

[sub_resource type="AnimationNodeBlendSpace2D" id=9]
blend_point_0/node = SubResource( 5 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 6 )
blend_point_1/pos = Vector2( 0, 1 )
blend_point_2/node = SubResource( 7 )
blend_point_2/pos = Vector2( 0, -1 )
blend_point_3/node = SubResource( 8 )
blend_point_3/pos = Vector2( 1, 0 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "Idle"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "Idle"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "Idle"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "Idle"

[sub_resource type="AnimationNodeBlendSpace2D" id=14]
blend_point_0/node = SubResource( 10 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 11 )
blend_point_1/pos = Vector2( 0, 1 )
blend_point_2/node = SubResource( 12 )
blend_point_2/pos = Vector2( 0, -1 )
blend_point_3/node = SubResource( 13 )
blend_point_3/pos = Vector2( 1, 0 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=15]

[sub_resource type="AnimationNodeStateMachineTransition" id=16]

[sub_resource type="AnimationNodeStateMachine" id=17]
states/Hit/node = SubResource( 9 )
states/Hit/position = Vector2( 412, 100 )
states/Idle/node = SubResource( 14 )
states/Idle/position = Vector2( 262, 107 )
transitions = [ "Idle", "Hit", SubResource( 15 ), "Hit", "Idle", SubResource( 16 ) ]
start_node = "Idle"
graph_offset = Vector2( 8.72788, 66.2827 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=18]

[sub_resource type="CircleShape2D" id=19]
radius = 48.0296

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 28.4744, 13.1867 )

[sub_resource type="CapsuleShape2D" id=21]
height = 16.3483

[node name="Enemy" type="KinematicBody2D" groups=[
"Enemy",
]]
script = ExtResource( 2 )
enemyHealth = 3

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
vframes = 3
hframes = 8
frame = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Death = SubResource( 2 )
anims/Hit = SubResource( 3 )
anims/Idle = SubResource( 4 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 17 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 18 )
parameters/Hit/blend_position = Vector2( 0, 0 )
parameters/Idle/blend_position = Vector2( -0.998462, 0 )

[node name="DetectionZone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionZone"]
shape = SubResource( 19 )

[node name="Hitbox" parent="." instance=ExtResource( 3 )]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0, 18.6878 )
shape = SubResource( 20 )

[node name="Hurtbox" parent="." instance=ExtResource( 4 )]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 21 )

[node name="Stats" parent="." instance=ExtResource( 5 )]
[connection signal="body_entered" from="DetectionZone" to="." method="_on_DetectionZone_body_entered"]
[connection signal="body_exited" from="DetectionZone" to="." method="_on_DetectionZone_body_exited"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]

[editable path="Hitbox"]

[editable path="Hurtbox"]
